--- a/src/Mapbender/ManagerBundle/Resources/translations/messages.it.xlf
+++ b/src/Mapbender/ManagerBundle/Resources/translations/messages.it.xlf
@@ -116,7 +116,7 @@
       </trans-unit>
       <trans-unit id="55e18fb3b32d459c43c4108aa49ed8a2" resname="mb.manager.admin.application.security.public">
         <source>mb.manager.admin.application.security.public</source>
-        <target>pubblica</target>
+        <target>attivo</target>
       </trans-unit>
       <trans-unit id="27cef7d0a0eeb318a4e438d61725648d" resname="mb.manager.admin.layerset.add">
         <source>mb.manager.admin.layerset.add</source>
