--- a/src/Mapbender/CoreBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.de.xlf
@@ -2,6 +2,18 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
   <file source-language="de" datatype="plaintext" original="file.ext">
     <body>
+      <trans-unit id="f741a4a709f26fdf399f7b805ff27125" resname="mb.core.featureinfo.error.nolayer">
+        <source>mb.core.featureinfo.error.nolayer</source>
+        <target>Informationsebene existiert nicht.</target>
+      </trans-unit>
+      <trans-unit id="4000aaa3f1fd6921b40ae958ee5d0c2b" resname="mb.core.featureinfo.error.unknownoption">
+        <source>mb.core.featureinfo.error.unknownoption</source>
+        <target>Unbekannte Option %key% für %namespace%.%widgetname%.</target>
+      </trans-unit>
+      <trans-unit id="21505ff4507774e2777bb6a166e8bf31" resname="mb.core.featureinfo.popup.btn.ok">
+        <source>mb.core.featureinfo.popup.btn.ok</source>
+        <target>Schließen</target>
+      </trans-unit>
       <trans-unit id="3f141d25282496cf3791bd532359e433" resname="mb.core.aboutdialog.content.versionprefix">
         <source>mb.core.aboutdialog.content.versionprefix</source>
         <target>Version</target>
@@ -114,17 +126,9 @@
         <source>mb.core.sketch.circle.form.button.cancel</source>
         <target>Abbrechen</target>
       </trans-unit>
-      <trans-unit id="f741a4a709f26fdf399f7b805ff27125" resname="mb.core.featureinfo.error.nolayer">
-        <source>mb.core.featureinfo.error.nolayer</source>
-        <target>Informationsebene existiert nicht.</target>
-      </trans-unit>
-      <trans-unit id="4000aaa3f1fd6921b40ae958ee5d0c2b" resname="mb.core.featureinfo.error.unknownoption">
-        <source>mb.core.featureinfo.error.unknownoption</source>
-        <target>Unbekannte Option %key% für %namespace%.%widgetname%.</target>
-      </trans-unit>
-      <trans-unit id="21505ff4507774e2777bb6a166e8bf31" resname="mb.core.featureinfo.popup.btn.ok">
-        <source>mb.core.featureinfo.popup.btn.ok</source>
-        <target>Schließen</target>
+      <trans-unit id="7676545c9153a0ed87dc96296d665c5a" resname="mb.core.metadata.popup.title">
+        <source>mb.core.metadata.popup.title</source>
+        <target>Metadaten</target>
       </trans-unit>
       <trans-unit id="d2279b60abd41fd9e228763532d10b02" resname="mb.core.gpsposition.error.notsupported">
         <source>mb.core.gpsposition.error.notsupported</source>
@@ -217,6 +221,10 @@
       <trans-unit id="f64a6c2fa79ba290fd214c07b396e006" resname="mb.core.layertree.label.zoomtolayer">
         <source>mb.core.layertree.label.zoomtolayer</source>
         <target>Zoom auf Ebene</target>
+      </trans-unit>
+      <trans-unit id="a55fa2bdd2dbedda05045a70c8d7c36b" resname="mb.core.layertree.label.metadata">
+        <source>mb.core.layertree.label.metadata</source>
+        <target>Metadaten</target>
       </trans-unit>
       <trans-unit id="c1e88d23834e42294c5c46903293bbb3" resname="mb.core.layertree.tooltip.removelayer">
         <source>mb.core.layertree.tooltip.removelayer</source>
@@ -666,6 +674,98 @@
         <source>mb.core.simplesearch.class.description</source>
         <target>Einfeldsuche über JSON-Daten (z.B. Solr)</target>
       </trans-unit>
+      <trans-unit id="49dbb82d8fa72b2da9fa51a7b02c87a8" resname="mb.core.metadata.section.common">
+        <source>mb.core.metadata.section.common</source>
+        <target>Allgemein</target>
+      </trans-unit>
+      <trans-unit id="2adbba2337679791f8e8da9fe6cd6293" resname="mb.core.metadata.section.common.title">
+        <source>mb.core.metadata.section.common.title</source>
+        <target>Titel</target>
+      </trans-unit>
+      <trans-unit id="a17b7e6fc750101d4e258bcb18edf7b5" resname="mb.core.metadata.section.common.name">
+        <source>mb.core.metadata.section.common.name</source>
+        <target>Name</target>
+      </trans-unit>
+      <trans-unit id="369e27b8b942687b8b3ab07383599497" resname="mb.core.metadata.section.common.version">
+        <source>mb.core.metadata.section.common.version</source>
+        <target>Version</target>
+      </trans-unit>
+      <trans-unit id="42ee2e04b278fc334d6a19fc6fcf2226" resname="mb.core.metadata.section.common.originUrl">
+        <source>mb.core.metadata.section.common.originUrl</source>
+        <target>Ursprungs-URL</target>
+      </trans-unit>
+      <trans-unit id="92b4fc502af7b6cea46ff3fdf49e71be" resname="mb.core.metadata.section.common.description">
+        <source>mb.core.metadata.section.common.description</source>
+        <target>Beschreibung</target>
+      </trans-unit>
+      <trans-unit id="c243ef1cccfbc36c3f6e769b7c03bdd8" resname="mb.core.metadata.section.common.onlineResource">
+        <source>mb.core.metadata.section.common.onlineResource</source>
+        <target>Onlineresource</target>
+      </trans-unit>
+      <trans-unit id="30f2b0cf8a63fc71e809baf32a1b7b4f" resname="mb.core.metadata.section.common.exceptionFormats">
+        <source>mb.core.metadata.section.common.exceptionFormats</source>
+        <target>Ausnahmeformate</target>
+      </trans-unit>
+      <trans-unit id="d85c5d3e03aeb2c9fb6fc5eec5974aea" resname="mb.core.metadata.section.common.fees">
+        <source>mb.core.metadata.section.common.fees</source>
+        <target>Gebühren</target>
+      </trans-unit>
+      <trans-unit id="a40b5588c9ca89653a0a0c030778b679" resname="mb.core.metadata.section.common.accessconstraints">
+        <source>mb.core.metadata.section.common.accessconstraints</source>
+        <target>Zugangsbeschränkungen</target>
+      </trans-unit>
+      <trans-unit id="4a2eb19dc3c9f8a98e653028dccf70df" resname="mb.core.metadata.section.contact">
+        <source>mb.core.metadata.section.contact</source>
+        <target>Kontakt</target>
+      </trans-unit>
+      <trans-unit id="1cfd7847bbe167571cf5ce07dd032242" resname="mb.core.metadata.section.contact.person">
+        <source>mb.core.metadata.section.contact.person</source>
+        <target>Person</target>
+      </trans-unit>
+      <trans-unit id="65a03260d6b23618d6b9a4ba350d64dc" resname="mb.core.metadata.section.contact.position">
+        <source>mb.core.metadata.section.contact.position</source>
+        <target>Position</target>
+      </trans-unit>
+      <trans-unit id="1a4b424bea3a48fc691624cab881e75a" resname="mb.core.metadata.section.contact.organization">
+        <source>mb.core.metadata.section.contact.organization</source>
+        <target>Organization</target>
+      </trans-unit>
+      <trans-unit id="3973c378251a0f2024a66773bc5da666" resname="mb.core.metadata.section.contact.voiceTelephone">
+        <source>mb.core.metadata.section.contact.voiceTelephone</source>
+        <target>Telefon</target>
+      </trans-unit>
+      <trans-unit id="0939ca7eb494820b3df2cf8fb74c2d90" resname="mb.core.metadata.section.contact.facsimileTelephone">
+        <source>mb.core.metadata.section.contact.facsimileTelephone</source>
+        <target>Fax</target>
+      </trans-unit>
+      <trans-unit id="e7c11729fbf8fdbdd8367a4356c328f6" resname="mb.core.metadata.section.contact.electronicMailAddress">
+        <source>mb.core.metadata.section.contact.electronicMailAddress</source>
+        <target>E-Mail</target>
+      </trans-unit>
+      <trans-unit id="38bb2f9c35c464936a4b013f571cdd5b" resname="mb.core.metadata.section.contact.address">
+        <source>mb.core.metadata.section.contact.address</source>
+        <target>Adresse</target>
+      </trans-unit>
+      <trans-unit id="2713b5dd5a2c30773848b4248f5c7000" resname="mb.core.metadata.section.contact.addressType">
+        <source>mb.core.metadata.section.contact.addressType</source>
+        <target>Adress-Type</target>
+      </trans-unit>
+      <trans-unit id="cbc612830db262518966e551199863a4" resname="mb.core.metadata.section.contact.addressCity">
+        <source>mb.core.metadata.section.contact.addressCity</source>
+        <target>Stadt</target>
+      </trans-unit>
+      <trans-unit id="d7a07960a29c2b0f04e7bfb7f392580c" resname="mb.core.metadata.section.contact.addressStateOrProvince">
+        <source>mb.core.metadata.section.contact.addressStateOrProvince</source>
+        <target>Bundesland</target>
+      </trans-unit>
+      <trans-unit id="8d234b93e420bbd200b68e1592d8f5b0" resname="mb.core.metadata.section.contact.addressPostCode">
+        <source>mb.core.metadata.section.contact.addressPostCode</source>
+        <target>PLZ</target>
+      </trans-unit>
+      <trans-unit id="6126ca318637bdc16f292b8002b25ef1" resname="mb.core.metadata.section.contact.addressCountry">
+        <source>mb.core.metadata.section.contact.addressCountry</source>
+        <target>Land</target>
+      </trans-unit>
       <trans-unit id="f5bd5fff138c48e2bb72f9446a4bbfa7" resname="mb.core.admin.poi.label.usemailto">
         <source>mb.core.admin.poi.label.usemailto</source>
         <target>Mailto verwenden</target>
@@ -737,10 +837,6 @@
       <trans-unit id="46b75948336bd4019bbaee9324151ecc" resname="mb.core.poi.label.text">
         <source>mb.core.poi.label.text</source>
         <target>Bearbeiten Sie den Text</target>
-      </trans-unit>
-      <trans-unit id="a55fa2bdd2dbedda05045a70c8d7c36b" resname="mb.core.layertree.label.metadata">
-        <source>mb.core.layertree.label.metadata</source>
-        <target>Metadaten</target>
       </trans-unit>
       <trans-unit id="6c94e9d72f4b9fe8f3d778bbd0f3a0c4" resname="mb.core.layertree.label.legend">
         <source>mb.core.layertree.label.legend</source>
