--- a/src/Mapbender/CoreBundle/Resources/translations/messages.en.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.en.xlf
@@ -438,6 +438,18 @@
         <source>mb.core.simplesearch.class.description</source>
         <target>Single field search on JSON sources (e.g. Solr)</target>
       </trans-unit>
+      <trans-unit id="313130e9ce7f77c283bdbf630a77a026" resname="mb.core.htmlelement.class.title">
+        <source>mb.core.htmlelement.class.title</source>
+        <target>HTML</target>
+      </trans-unit>
+      <trans-unit id="ce2413ae706bd739dcbc0b4f9a289cef" resname="mb.core.htmlelement.class.description">
+        <source>mb.core.htmlelement.class.description</source>
+        <target>Add some HTML</target>
+      </trans-unit>
+      <trans-unit id="d39455710ac8e12021e4959d6e1c6b85" resname="mb.core.htmlelement.tag.html">
+        <source>mb.core.htmlelement.tag.html</source>
+        <target>HTML</target>
+      </trans-unit>
       <trans-unit id="f123690a3603fb7e32cfb02774f84512" resname="mb.core.legend.nolegend">
         <source>mb.core.legend.nolegend</source>
         <target>No legend available</target>
