--- a/src/Mapbender/CoreBundle/Resources/translations/messages.fr.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.fr.xlf
@@ -136,7 +136,7 @@
       </trans-unit>
       <trans-unit id="7676545c9153a0ed87dc96296d665c5a" resname="mb.core.metadata.popup.title">
         <source>mb.core.metadata.popup.title</source>
-        <target>__mb.core.metadata.popup.title</target>
+        <target>Metadata</target>
       </trans-unit>
       <trans-unit id="d2279b60abd41fd9e228763532d10b02" resname="mb.core.gpsposition.error.notsupported">
         <source>mb.core.gpsposition.error.notsupported</source>
@@ -681,118 +681,6 @@
       <trans-unit id="f5721f3be6fafc85615fee69cc4e94bc" resname="mb.core.simplesearch.class.description">
         <source>mb.core.simplesearch.class.description</source>
         <target>__mb.core.simplesearch.class.description</target>
-      </trans-unit>
-      <trans-unit id="49dbb82d8fa72b2da9fa51a7b02c87a8" resname="mb.core.metadata.section.common">
-        <source>mb.core.metadata.section.common</source>
-        <target>__mb.core.metadata.section.common</target>
-      </trans-unit>
-      <trans-unit id="2adbba2337679791f8e8da9fe6cd6293" resname="mb.core.metadata.section.common.title">
-        <source>mb.core.metadata.section.common.title</source>
-        <target>__mb.core.metadata.section.common.title</target>
-      </trans-unit>
-      <trans-unit id="a17b7e6fc750101d4e258bcb18edf7b5" resname="mb.core.metadata.section.common.name">
-        <source>mb.core.metadata.section.common.name</source>
-        <target>__mb.core.metadata.section.common.name</target>
-      </trans-unit>
-      <trans-unit id="369e27b8b942687b8b3ab07383599497" resname="mb.core.metadata.section.common.version">
-        <source>mb.core.metadata.section.common.version</source>
-        <target>__mb.core.metadata.section.common.version</target>
-      </trans-unit>
-      <trans-unit id="42ee2e04b278fc334d6a19fc6fcf2226" resname="mb.core.metadata.section.common.originUrl">
-        <source>mb.core.metadata.section.common.originUrl</source>
-        <target>__mb.core.metadata.section.common.originUrl</target>
-      </trans-unit>
-      <trans-unit id="92b4fc502af7b6cea46ff3fdf49e71be" resname="mb.core.metadata.section.common.description">
-        <source>mb.core.metadata.section.common.description</source>
-        <target>__mb.core.metadata.section.common.description</target>
-      </trans-unit>
-      <trans-unit id="c243ef1cccfbc36c3f6e769b7c03bdd8" resname="mb.core.metadata.section.common.onlineResource">
-        <source>mb.core.metadata.section.common.onlineResource</source>
-        <target>__mb.core.metadata.section.common.onlineResource</target>
-      </trans-unit>
-      <trans-unit id="30f2b0cf8a63fc71e809baf32a1b7b4f" resname="mb.core.metadata.section.common.exceptionFormats">
-        <source>mb.core.metadata.section.common.exceptionFormats</source>
-        <target>__mb.core.metadata.section.common.exceptionFormats</target>
-      </trans-unit>
-      <trans-unit id="d85c5d3e03aeb2c9fb6fc5eec5974aea" resname="mb.core.metadata.section.common.fees">
-        <source>mb.core.metadata.section.common.fees</source>
-        <target>__mb.core.metadata.section.common.fees</target>
-      </trans-unit>
-      <trans-unit id="a40b5588c9ca89653a0a0c030778b679" resname="mb.core.metadata.section.common.accessconstraints">
-        <source>mb.core.metadata.section.common.accessconstraints</source>
-        <target>__mb.core.metadata.section.common.accessconstraints</target>
-      </trans-unit>
-      <trans-unit id="4a2eb19dc3c9f8a98e653028dccf70df" resname="mb.core.metadata.section.contact">
-        <source>mb.core.metadata.section.contact</source>
-        <target>__mb.core.metadata.section.contact</target>
-      </trans-unit>
-      <trans-unit id="1cfd7847bbe167571cf5ce07dd032242" resname="mb.core.metadata.section.contact.person">
-        <source>mb.core.metadata.section.contact.person</source>
-        <target>__mb.core.metadata.section.contact.person</target>
-      </trans-unit>
-      <trans-unit id="65a03260d6b23618d6b9a4ba350d64dc" resname="mb.core.metadata.section.contact.position">
-        <source>mb.core.metadata.section.contact.position</source>
-        <target>__mb.core.metadata.section.contact.position</target>
-      </trans-unit>
-      <trans-unit id="1a4b424bea3a48fc691624cab881e75a" resname="mb.core.metadata.section.contact.organization">
-        <source>mb.core.metadata.section.contact.organization</source>
-        <target>__mb.core.metadata.section.contact.organization</target>
-      </trans-unit>
-      <trans-unit id="3973c378251a0f2024a66773bc5da666" resname="mb.core.metadata.section.contact.voiceTelephone">
-        <source>mb.core.metadata.section.contact.voiceTelephone</source>
-        <target>__mb.core.metadata.section.contact.voiceTelephone</target>
-      </trans-unit>
-      <trans-unit id="0939ca7eb494820b3df2cf8fb74c2d90" resname="mb.core.metadata.section.contact.facsimileTelephone">
-        <source>mb.core.metadata.section.contact.facsimileTelephone</source>
-        <target>__mb.core.metadata.section.contact.facsimileTelephone</target>
-      </trans-unit>
-      <trans-unit id="e7c11729fbf8fdbdd8367a4356c328f6" resname="mb.core.metadata.section.contact.electronicMailAddress">
-        <source>mb.core.metadata.section.contact.electronicMailAddress</source>
-        <target>__mb.core.metadata.section.contact.electronicMailAddress</target>
-      </trans-unit>
-      <trans-unit id="38bb2f9c35c464936a4b013f571cdd5b" resname="mb.core.metadata.section.contact.address">
-        <source>mb.core.metadata.section.contact.address</source>
-        <target>__mb.core.metadata.section.contact.address</target>
-      </trans-unit>
-      <trans-unit id="2713b5dd5a2c30773848b4248f5c7000" resname="mb.core.metadata.section.contact.addressType">
-        <source>mb.core.metadata.section.contact.addressType</source>
-        <target>__mb.core.metadata.section.contact.addressType</target>
-      </trans-unit>
-      <trans-unit id="cbc612830db262518966e551199863a4" resname="mb.core.metadata.section.contact.addressCity">
-        <source>mb.core.metadata.section.contact.addressCity</source>
-        <target>__mb.core.metadata.section.contact.addressCity</target>
-      </trans-unit>
-      <trans-unit id="d7a07960a29c2b0f04e7bfb7f392580c" resname="mb.core.metadata.section.contact.addressStateOrProvince">
-        <source>mb.core.metadata.section.contact.addressStateOrProvince</source>
-        <target>__mb.core.metadata.section.contact.addressStateOrProvince</target>
-      </trans-unit>
-      <trans-unit id="8d234b93e420bbd200b68e1592d8f5b0" resname="mb.core.metadata.section.contact.addressPostCode">
-        <source>mb.core.metadata.section.contact.addressPostCode</source>
-        <target>__mb.core.metadata.section.contact.addressPostCode</target>
-      </trans-unit>
-      <trans-unit id="6126ca318637bdc16f292b8002b25ef1" resname="mb.core.metadata.section.contact.addressCountry">
-        <source>mb.core.metadata.section.contact.addressCountry</source>
-        <target>__mb.core.metadata.section.contact.addressCountry</target>
-      </trans-unit>
-      <trans-unit id="c38799798ac35fb2e9e2d922636fa5bb" resname="mb.core.metadata.section.layer">
-        <source>mb.core.metadata.section.layer</source>
-        <target>__mb.core.metadata.section.layer</target>
-      </trans-unit>
-      <trans-unit id="e2f98554ad73ccc374d1a7f3c0af78f8" resname="mb.core.metadata.section.layer.name">
-        <source>mb.core.metadata.section.layer.name</source>
-        <target>__mb.core.metadata.section.layer.name</target>
-      </trans-unit>
-      <trans-unit id="cdb032c731e47758f3cc866fd70efe4d" resname="mb.core.metadata.section.layer.title">
-        <source>mb.core.metadata.section.layer.title</source>
-        <target>__mb.core.metadata.section.layer.title</target>
-      </trans-unit>
-      <trans-unit id="2d8834a8ca14246a42082c33455b2b2c" resname="mb.core.metadata.section.layer.srs">
-        <source>mb.core.metadata.section.layer.srs</source>
-        <target>__mb.core.metadata.section.layer.srs</target>
-      </trans-unit>
-      <trans-unit id="02b2fd5741559c735c92f9e9e7735ccb" resname="mb.core.metadata.section.layer.bbox">
-        <source>mb.core.metadata.section.layer.bbox</source>
-        <target>__mb.core.metadata.section.layer.bbox</target>
       </trans-unit>
       <trans-unit id="f5bd5fff138c48e2bb72f9446a4bbfa7" resname="mb.core.admin.poi.label.usemailto">
         <source>mb.core.admin.poi.label.usemailto</source>
