--- a/src/Mapbender/WmsBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/WmsBundle/Resources/translations/messages.de.xlf
@@ -120,7 +120,7 @@
       </trans-unit>
       <trans-unit id="e24fa49a5f16119c86e3139728db917c" resname="mb.wms.wmsloader.repo.view.label.facsimile">
         <source>mb.wms.wmsloader.repo.view.label.facsimile</source>
-        <target>Facsimile</target>
+        <target>Fax</target>
       </trans-unit>
       <trans-unit id="27be6117b06737231b0a3fae0d10cb29" resname="mb.wms.wmsloader.repo.view.label.email">
         <source>mb.wms.wmsloader.repo.view.label.email</source>
@@ -537,6 +537,126 @@
       <trans-unit id="e162f0ce53da6cde57332698cb2e8f4d" resname="mb.wms.source.image_error.statuscode">
         <source>mb.wms.source.image_error.statuscode</source>
         <target>HTTP Statuscode</target>
+      </trans-unit>
+      <trans-unit id="3fc45286dbed3669423eea7520e5278f" resname="mb.wms.metadata.section.common">
+        <source>mb.wms.metadata.section.common</source>
+        <target>Allgemein</target>
+      </trans-unit>
+      <trans-unit id="c92e0e2df5db11fd510a0cd23bd2a1c5" resname="mb.wms.metadata.section.common.title">
+        <source>mb.wms.metadata.section.common.title</source>
+        <target>Title</target>
+      </trans-unit>
+      <trans-unit id="7f29afe01b89b0f9806207ff2e7e6db4" resname="mb.wms.metadata.section.common.name">
+        <source>mb.wms.metadata.section.common.name</source>
+        <target>Name</target>
+      </trans-unit>
+      <trans-unit id="d55540e96386eeff3e2ce0071142ad56" resname="mb.wms.metadata.section.common.version">
+        <source>mb.wms.metadata.section.common.version</source>
+        <target>Version</target>
+      </trans-unit>
+      <trans-unit id="fbab2e3980dd2f1b8cf6ff8fbe06f380" resname="mb.wms.metadata.section.common.originUrl">
+        <source>mb.wms.metadata.section.common.originUrl</source>
+        <target>Ursprungs-URL</target>
+      </trans-unit>
+      <trans-unit id="b41a13ce28a88496252ebe893e380f3b" resname="mb.wms.metadata.section.common.description">
+        <source>mb.wms.metadata.section.common.description</source>
+        <target>Beschreibung</target>
+      </trans-unit>
+      <trans-unit id="5c8371b499bb3125d15ea1842edcc671" resname="mb.wms.metadata.section.common.onlineResource">
+        <source>mb.wms.metadata.section.common.onlineResource</source>
+        <target>OnlineResource</target>
+      </trans-unit>
+      <trans-unit id="2b53b27cfc3356b9ce7f957598da62e2" resname="mb.wms.metadata.section.common.exceptionFormats">
+        <source>mb.wms.metadata.section.common.exceptionFormats</source>
+        <target>Ausnahmeformate</target>
+      </trans-unit>
+      <trans-unit id="5b924e0d5f54b6a43a39a12c60cf670c" resname="mb.wms.metadata.popup.title">
+        <source>mb.wms.metadata.popup.title</source>
+        <target>Metadaten</target>
+      </trans-unit>
+      <trans-unit id="7330961cd1002614243fe71e8a4721e7" resname="mb.wms.metadata.section.contact">
+        <source>mb.wms.metadata.section.contact</source>
+        <target>Kontakt</target>
+      </trans-unit>
+      <trans-unit id="1423bd6890ce94762fa8857ec0bf22c2" resname="mb.wms.metadata.section.contact.person">
+        <source>mb.wms.metadata.section.contact.person</source>
+        <target>Person</target>
+      </trans-unit>
+      <trans-unit id="cb79300f2e60f094edfef7fd4e0b83d1" resname="mb.wms.metadata.section.contact.position">
+        <source>mb.wms.metadata.section.contact.position</source>
+        <target>Position</target>
+      </trans-unit>
+      <trans-unit id="77562ca4b9e57650a2210f7e4b82c8a2" resname="mb.wms.metadata.section.contact.organization">
+        <source>mb.wms.metadata.section.contact.organization</source>
+        <target>Organization</target>
+      </trans-unit>
+      <trans-unit id="8956642ac6f7607fa976acf25e4a169e" resname="mb.wms.metadata.section.contact.voiceTelephone">
+        <source>mb.wms.metadata.section.contact.voiceTelephone</source>
+        <target>Telefon</target>
+      </trans-unit>
+      <trans-unit id="f080825f7b3dc90404fc451a1be9c7a7" resname="mb.wms.metadata.section.contact.facsimileTelephone">
+        <source>mb.wms.metadata.section.contact.facsimileTelephone</source>
+        <target>Fax</target>
+      </trans-unit>
+      <trans-unit id="b3993c730cdb23a6f00a03e95bf488d0" resname="mb.wms.metadata.section.contact.electronicMailAddress">
+        <source>mb.wms.metadata.section.contact.electronicMailAddress</source>
+        <target>E-Mail</target>
+      </trans-unit>
+      <trans-unit id="07136ca76c45547a5c4d484686606b7e" resname="mb.wms.metadata.section.contact.address">
+        <source>mb.wms.metadata.section.contact.address</source>
+        <target>Adresse</target>
+      </trans-unit>
+      <trans-unit id="f5a3514ee73eb0df90d07a3ba3e474f2" resname="mb.wms.metadata.section.contact.addressType">
+        <source>mb.wms.metadata.section.contact.addressType</source>
+        <target>Adresstyp</target>
+      </trans-unit>
+      <trans-unit id="225f44d5f01e8597eae5e97d61f34269" resname="mb.wms.metadata.section.contact.addressCity">
+        <source>mb.wms.metadata.section.contact.addressCity</source>
+        <target>Stadt</target>
+      </trans-unit>
+      <trans-unit id="66035d14243b81d859906433a2af0f80" resname="mb.wms.metadata.section.contact.addressStateOrProvince">
+        <source>mb.wms.metadata.section.contact.addressStateOrProvince</source>
+        <target>Bundesland</target>
+      </trans-unit>
+      <trans-unit id="20299df7798ce2dfcfdb5a7b3a8ca476" resname="mb.wms.metadata.section.contact.addressPostCode">
+        <source>mb.wms.metadata.section.contact.addressPostCode</source>
+        <target>PLZ</target>
+      </trans-unit>
+      <trans-unit id="fe90bfd92d3c625a58393f077c2347e3" resname="mb.wms.metadata.section.contact.addressCountry">
+        <source>mb.wms.metadata.section.contact.addressCountry</source>
+        <target>Staat</target>
+      </trans-unit>
+      <trans-unit id="35618b11d8edcb5dfe60254a8508b48d" resname="mb.wms.metadata.section.layer">
+        <source>mb.wms.metadata.section.layer</source>
+        <target>Ebene</target>
+      </trans-unit>
+      <trans-unit id="a3a7e1cb96ae7d787f980d5104f9baad" resname="mb.wms.metadata.section.layer.name">
+        <source>mb.wms.metadata.section.layer.name</source>
+        <target>Name</target>
+      </trans-unit>
+      <trans-unit id="4832b1d3b92d87307243b3699f922a88" resname="mb.wms.metadata.section.layer.title">
+        <source>mb.wms.metadata.section.layer.title</source>
+        <target>Titel</target>
+      </trans-unit>
+      <trans-unit id="5f1aebf1cb95ac18919a7352711a3abb" resname="mb.wms.metadata.section.layer.srs">
+        <source>mb.wms.metadata.section.layer.srs</source>
+        <target>SRS</target>
+      </trans-unit>
+      <trans-unit id="546bea28d4a3e58e2083b7d320730bc5" resname="mb.wms.metadata.section.layer.bbox">
+        <source>mb.wms.metadata.section.layer.bbox</source>
+        <target>BoundingBox</target>
+      </trans-unit>
+      <trans-unit id="9f460e7ad44bc13df4bbbd75a9c6fe52" resname="mb.wms.metadata.section.useconditions">
+        <source>mb.wms.metadata.section.useconditions</source>
+        <target>Nutzungsbedingungen</target>
+      </trans-unit>
+      <trans-unit id="1af618335ebd3e9ccd2700acc8a595de" resname="mb.wms.metadata.section.useconditions.fees">
+        <source>mb.wms.metadata.section.useconditions.fees</source>
+        <target>Gebühren</target>
+      </trans-unit>
+      <trans-unit id="d94d43c25c59a77eb1a5aa77f790ba4e" resname="mb.wms.metadata.section.useconditions.accessconstraints">
+        <source>mb.wms.metadata.section.useconditions.accessconstraints</source>
+        <target>Zugangsbeschränkungen</target>
       </trans-unit>
     </body>
   </file>
