--- a/src/Mapbender/CoreBundle/Resources/translations/messages.es.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.es.xlf
@@ -52,7 +52,7 @@
       </trans-unit>
       <trans-unit id="f518bb2f60b3deb2e5b973e00e8088f2" resname="mb.core.searchrouter.result_counter">
         <source>mb.core.searchrouter.result_counter</source>
-        <target>Result counter</target>
+        <target>Results: %count%</target>
       </trans-unit>
       <trans-unit id="09839a0199d014e89f195b741b758697" resname="mb.core.poi.sharepoi">
         <source>mb.core.poi.sharepoi</source>
@@ -766,13 +766,9 @@
         <source>Search</source>
         <target>Buscar</target>
       </trans-unit>
-      <trans-unit id="a091e836228a240d137f28d1f7e99f5e" resname="mb.core.searchrouter.no_results">
-        <source>mb.core.searchrouter.no_results</source>
-        <target>No results found.</target>
-      </trans-unit>
-      <trans-unit id="f518bb2f60b3deb2e5b973e00e8088f2" resname="mb.core.searchrouter.result_counter">
-        <source>mb.core.searchrouter.result_counter</source>
-        <target>Results: %count%</target>
+      <trans-unit id="4be1f8a2c784e24713e63c07ed4b5f49" resname="mb.core.metadata.popup.btn.ok">
+        <source>mb.core.metadata.popup.btn.ok</source>
+        <target>Close</target>
       </trans-unit>
     </body>
   </file>
