--- a/src/Mapbender/CoreBundle/Resources/translations/messages.it.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.it.xlf
@@ -742,6 +742,18 @@
         <source>mb.core.admin.layertree.label.showlayerremove</source>
         <target>__mb.core.admin.layertree.label.showlayerremove</target>
       </trans-unit>
+      <trans-unit id="7676545c9153a0ed87dc96296d665c5a" resname="mb.core.metadata.popup.title">
+        <source>mb.core.metadata.popup.title</source>
+        <target>__mb.core.metadata.popup.title</target>
+      </trans-unit>
+      <trans-unit id="4be1f8a2c784e24713e63c07ed4b5f49" resname="mb.core.metadata.popup.btn.ok">
+        <source>mb.core.metadata.popup.btn.ok</source>
+        <target>__mb.core.metadata.popup.btn.ok</target>
+      </trans-unit>
+      <trans-unit id="a55fa2bdd2dbedda05045a70c8d7c36b" resname="mb.core.layertree.label.metadata">
+        <source>mb.core.layertree.label.metadata</source>
+        <target>__mb.core.layertree.label.metadata</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
