--- a/src/Mapbender/ManagerBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/ManagerBundle/Resources/translations/messages.de.xlf
@@ -450,6 +450,22 @@
         <source>mb.manager.template.region.accordion.label</source>
         <target>Akkordeon</target>
       </trans-unit>
+      <trans-unit id="cae4b6bbf2a2d496be9bf327a1955ab4" resname="mb.manager.admin.application.upload.button">
+        <source>mb.manager.admin.application.upload.button</source>
+        <target>Datei auswählen:</target>
+      </trans-unit>
+      <trans-unit id="fd5de98877bbdf4173112e0623ef1163" resname="mb.manager.admin.application.upload.label">
+        <source>mb.manager.admin.application.upload.label</source>
+        <target>Keine Datei ausgewählt...</target>
+      </trans-unit>
+      <trans-unit id="dbd9bf9785be4d2e41fdea56c53c6219" resname="mb.manager.upload.label_delete">
+        <source>mb.manager.upload.label_delete</source>
+        <target>Bild entfernt.</target>
+      </trans-unit>
+      <trans-unit id="8c8173e8ee2b47284d02906130e77bad" resname="mb.manager.admin.application.upload.tooltip">
+        <source>mb.manager.admin.application.upload.tooltip</source>
+        <target>Bitte klicken Sie, um einen Screenshot hochzuladen</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
