--- a/src/Mapbender/ManagerBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/ManagerBundle/Resources/translations/messages.de.xlf
@@ -466,6 +466,10 @@
         <source>mb.manager.admin.application.upload.tooltip</source>
         <target>Bitte klicken Sie, um einen Screenshot hochzuladen</target>
       </trans-unit>
+      <!--trans-unit id="aebe23501117e9bbab635579b16ced39" resname="mb.core.entity.app.screenshotfile.error">
+        <source>mb.core.entity.app.screenshotfile.error</source>
+        <target>error</target>
+      </trans-unit-->
     </body>
   </file>
 </xliff>
