--- a/src/Mapbender/ManagerBundle/Resources/translations/messages.en.xlf
+++ b/src/Mapbender/ManagerBundle/Resources/translations/messages.en.xlf
@@ -467,6 +467,14 @@
         <source>mb.manager.admin.application.upload.tooltip</source>
         <target>Please click to upload a screenshot</target>
       </trans-unit>
+      <trans-unit id="aebe23501117e9bbab635579b16ced39" resname="mb.core.entity.app.screenshotfile.error">
+        <source>mb.core.entity.app.screenshotfile.error</source>
+        <target>The file is too large (%uploadFileSize% bytes). Allowed maximum size is %maxFileSize% bytes.</target>
+      </trans-unit>
+      <trans-unit id="8b893357eea2f8e824f5e4bb613b3496" resname="mb.core.entity.app.screenshotfile.format_error">
+        <source>mb.core.entity.app.screenshotfile.format_error</source>
+        <target>This Fromat is not supported!</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
