Added en/de translations for buffer/ratio

--- a/src/Mapbender/WmsBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/WmsBundle/Resources/translations/messages.de.xlf
@@ -658,6 +658,14 @@
         <source>mb.wms.metadata.section.useconditions.accessconstraints</source>
         <target>Zugangsbeschränkungen</target>
       </trans-unit>
+      <trans-unit id="1eec62862c805bb073beebbee0e0891b" resname="mb.wms.wmsloader.repo.instance.label.ratio">
+        <source>mb.wms.wmsloader.repo.instance.label.ratio</source>
+        <target>BBOX-Faktor</target>
+      </trans-unit>
+      <trans-unit id="e80c0741d80e32fb80f40c9a17bc8610" resname="mb.wms.wmsloader.repo.instance.label.buffer">
+        <source>mb.wms.wmsloader.repo.instance.label.buffer</source>
+        <target>Kachel-Puffer</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
