--- a/src/Mapbender/WmsBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/WmsBundle/Resources/translations/messages.de.xlf
@@ -666,6 +666,10 @@
         <source>mb.wms.wmsloader.repo.instance.label.buffer</source>
         <target>Kachel-Puffer</target>
       </trans-unit>
+      <trans-unit id="08f84450da093c2a4eef8cca79b21030" resname="mb.wms.repo.instance.label.dimensions">
+        <source>mb.wms.repo.instance.label.dimensions</source>
+        <target>Dimensionen</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
