--- a/src/Mapbender/WmsBundle/Resources/translations/messages.en.xlf
+++ b/src/Mapbender/WmsBundle/Resources/translations/messages.en.xlf
@@ -678,6 +678,10 @@
         <source>mb.wms.wmsloader.repo.instance.label.buffer</source>
         <target>Tile buffer</target>
       </trans-unit>
+      <trans-unit id="08f84450da093c2a4eef8cca79b21030" resname="mb.wms.repo.instance.label.dimensions">
+        <source>mb.wms.repo.instance.label.dimensions</source>
+        <target>dimensions</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
